package app.entities;

public enum Role {
    CUSTOMER, ADMIN
}
